[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name="madas"
version="1.0.0rc1"
description = "The MAterials DAta Similarity framework."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name="Martin Kuban et al."}
]
maintainers = [
    {name="Martin Kuban", email="kuban@physik.hu-berlin.de"}
]
requires-python = ">= 3.10"
dependencies = [
    "numpy == 1.26",
    "pandas == 2.2",
    "ase >= 3.22",
    "matplotlib >= 3.5",
    "tqdm == 4.64",
    "scikit-learn == 1.1",
    "requests == 2.26",
    "nomad_dos_fingerprints@git+https://github.com/kubanmar/dos-fingerprints"
]
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/kubanmar/madas"

[tool.setuptools.packages.find]
include=["madas"]
exclude=["tests"]